--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,8 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.536.0",
-    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
